Optimize unit location updates with Redis and batch broadcast
Replaces direct database writes and individual WebSocket broadcasts for unit location updates with fast Redis storage and periodic batch broadcasting. Adds RedisLocationService, LocationBroadcastScheduler, and updates SimulationService to use Redis for real-time unit movement. Improves incident monitoring and assignment logic, adds new repository methods, and updates frontend to handle batched location updates for better performance.